# factorial

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  eratosthenes.hpp  factorial.hpp  main.cpp  math.hpp  perf.hpp
